--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,7 @@
 * {
-  font-family: "Explora", serif;
+  font-family: "TAN - TWINKLE";
   text-transform: uppercase;
-  font-size: 3rem;
+  font-size: 1.5rem;
   color: black;
 }
 ul {
@@ -20,5 +20,5 @@ a {
 }
 .header {
   padding: 10px 20px; /* Ajoute des marges internes */
-  border-bottom: 2px solid black; /* Ligne de séparation */
+  border-bottom: 3px solid black; /* Ligne de séparation */
 }
