style of description kinda done

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,12 +1,17 @@
-<p>
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis libero enim
-  obcaecati sapiente praesentium ex nemo nostrum quia inventore commodi dolorum,
-  aliquam quod id hic quas tenetur repellendus deleniti illum quasi ad? Numquam
-  fuga expedita doloribus nihil nobis, aliquam qui eligendi sint amet, commodi
-  at impedit sequi fugit asperiores voluptates dicta quae soluta voluptas
-  accusamus. Autem quidem accusantium quos debitis dolorum. Cupiditate nostrum
-  fugiat animi veritatis deserunt quod quis, perspiciatis nulla dolore magni aut
-  ipsam corporis voluptas quasi voluptates eius ut exercitationem illum sequi
-  quia. Reprehenderit saepe, maiores adipisci a fugiat laborum doloribus itaque
-  dolor deserunt sed cumque obcaecati nesciunt?
-</p>
+<div class="description">
+  <div class="description-text">
+    <p>
+      t is a long established fact that a reader will be distracted by the
+      readable content of a page when looking at its layout. The point of using
+      Lorem Ipsum is that it has a more-or-less normal distribution of letters,
+      as opposed to using 'Content here, content here', making it look like
+      readable English. Many desktop publishing packages and web page
+    </p>
+  </div>
+  <div class="contact-links">
+    <a class="github-link" href="https://github.com/Yennie32">github</a>
+    <a class="linkedin-link" href="https://www.linkedin.com/in/yennie-lake/"
+      >linkedin</a
+    >
+  </div>
+</div>
