--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,20 @@
-<header>
-  <div class="header">
-    <nav class="nav-header">
-      <ul>
-        <li><a href="">projets</a></li>
-        <li><a href="">contact</a></li>
-        <li><a href="">about me</a></li>
-      </ul>
-    </nav>
+<header class="header">
+  <div
+    class="burger-container"
+    (click)="toggleMenu()"
+    [class.active]="isMenuOpen"
+  >
+    <div class="burger">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
+  <nav class="nav-header" [class.open]="isMenuOpen">
+    <ul>
+      <li><a href="#">projets</a></li>
+      <li><a href="#">contact</a></li>
+      <li><a href="#">about me</a></li>
+    </ul>
+  </nav>
 </header>
