toggle menu in progress. header, hero, descr done

--- a/src/app/description/description.component.html
+++ b/src/app/description/description.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="description">
+<div class="description">
   <div class="description-text">
     <p>
       t is a long established fact that a reader will be distracted by the
@@ -9,8 +9,14 @@
     </p>
   </div>
   <div class="contact-links">
-    <a class="github-link" href="https://github.com/Yennie32" target="_blank">github</a>
-    <a class="linkedin-link" href="https://www.linkedin.com/in/yennie-lake/" target="_blank">linkedin</a
+    <a class="github-link" href="https://github.com/Yennie32" target="_blank"
+      >github</a
+    >
+    <a
+      class="linkedin-link"
+      href="https://www.linkedin.com/in/yennie-lake/"
+      target="_blank"
+      >linkedin</a
     >
   </div>
-</div> -->
+</div>
