--- a/src/app/description/description.component.css
+++ b/src/app/description/description.component.css
@@ -1,42 +1,81 @@
-.description{
+.description {
+  height: 40vh;
   display: flex;
   flex-direction: row;
-  border-bottom: 2px solid black;
-  justify-content: space-between;
+  border-bottom: 3px solid black;
+  justify-content: space-evenly;
 }
 
-.description-text {
-  flex: 2; /* Prend 2/3 de l'espace disponible */
-  display: flex; /* Utilisation de flexbox pour centrer le texte */
-  justify-content: center; /* Centrer horizontalement */
-  align-items: center; /* Centrer verticalement */
-  padding: 2rem 10rem; /* Pour espacer un peu le texte des bords */
-  border-right: 2px solid black;
-  text-align: center;
-}
 .contact-links {
-  flex: 1; /* Prend 1/3 de l'espace disponible */
-  display: flex;
-  flex-direction: column; /* Les liens sont affichés en colonne */
-  justify-content: center; /* Centrer les liens verticalement */
-  gap: 1rem; /* Ajouter un espace entre les liens */
   font-family: "TAN - TWINKLE";
-  text-align: center;
-
-}
-
-.github-link, .linkedin-link {
-  text-transform: uppercase;
-  text-decoration: none;
-  color: black;
 }
 
 p {
   font-family: "Nunito Sans", serif;
 }
 
-a:hover{
-  font-style: italic;
-  font-size: 1.5rem;
-  transition: font-size 0.5s;
+.github-link,
+.linkedin-link {
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+
+@media (max-width: 768px) {
+  .description {
+    display: flex;
+    flex-direction: column;
+  }
+  .description-text {
+    height: 50%;
+    display: flex;
+    align-items: center; /* Centre verticalement */
+    justify-content: center; /* Centre horizontalement */
+    text-align: center;
+    padding: 2rem; /* Ajuste le padding pour un meilleur centrage */
+    border-bottom: 3px solid black;
+    border-top: 3px solid black;
+  }
+  .contact-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    /* padding: 1rem; */
+  }
+}
+
+/* Desktop Responsiveness */
+@media (min-width: 769px) {
+  .description-text {
+    flex: 2; /* Prend 2/3 de l'espace disponible */
+    display: flex; /* Utilisation de flexbox pour centrer le texte */
+    justify-content: center; /* Centrer horizontalement */
+    align-items: center; /* Centrer verticalement */
+    padding: 2rem 1.5rem; /* Pour espacer un peu le texte des bords */
+    border-right: 2px solid black;
+    text-align: center;
+  }
+  .contact-links {
+    flex: 1; /* Prend 1/3 de l'espace disponible */
+    display: flex;
+    flex-direction: column; /* Les liens sont affichés en colonne */
+    justify-content: center; /* Centrer les liens verticalement */
+    gap: 2rem; /* Ajouter un espace entre les liens */
+    text-align: center;
+    font-size: 1.5rem;
+  }
+  a:hover {
+    font-style: italic;
+    font-size: 1.8rem;
+    transition: font-size 0.5s;
+  }
+}
+
+@media (min-width: 1200px) {
+  .description-text {
+    font-size: 1rem;
+  }
+  .contact-links {
+    font-size: 1.5rem;
+  }
 }
