--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,6 +6,7 @@
 }
 
 .header {
+  height: 10vh;
   padding: 10px 20px;
   border-bottom: 3px solid black;
   position: relative;
@@ -107,10 +108,14 @@ a {
 @media (min-width: 769px) {
   .nav-header ul {
     justify-content: space-around;
+    padding-top: 1rem;
   }
 
   .nav-header ul li {
     padding: 0 15px;
+  }
+  a:hover {
+    font-style: italic;
   }
 }
 
@@ -118,5 +123,8 @@ a {
   .nav-header ul {
     max-width: 1200px;
     margin: 0 auto;
+  }
+  a {
+    font-size: 1.5rem;
   }
 }
