--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -9,7 +9,11 @@
   height: 10vh;
   padding: 10px 20px;
   border-bottom: 3px solid black;
-  position: relative;
+  /* position: relative; */
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  background-color: #fff9ee;
 }
 
 ul {
