still working on architecture

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div class="homepage">
-  <router-outlet />
+<div class="portfolio-container">
+  <header>
+    <app-header />
+  </header>
+
+  <section id="main-page">
+    <div class="homepage">
+      <app-home-page />
+    </div>
+  </section>
+  <section id="projects">
+    <app-project-page />
+  </section>
 </div>
