page-title component done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,13 @@
     <app-header />
   </header>
 
-  <section id="main-page">
+  <main>
     <div class="homepage">
       <app-home-page />
     </div>
-  </section>
-  <section id="projects">
-    <app-project-page />
-  </section>
+
+    <div class="projects">
+      <app-project-page />
+    </div>
+  </main>
 </div>
