--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@ header {
   background-color: #fff9ee;
 }
 .homepage {
-  height: 100vh; /* L'ensemble des 3 composants prend 100% de la hauteur de l'écran */
+  /* height: 100vh; L'ensemble des 3 composants prend 100% de la hauteur de l'écran */
   overflow-y: auto; /* Permet le scroll si nécessaire */
 }
 
