--- a/src/app/features/home/components/description/description.component.css
+++ b/src/app/features/home/components/description/description.component.css
@@ -27,6 +27,7 @@ p {
     flex-direction: column;
   }
   .description-text {
+    margin-top: 2rem;
     height: 50%;
     display: flex;
     align-items: center; /* Centre verticalement */
