--- a/src/app/features/home/components/hero/hero.component.css
+++ b/src/app/features/home/components/hero/hero.component.css
@@ -16,7 +16,16 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    height: 28rem;
   }
+  .presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    height: 100%;
+  }
+
   .name {
     font-size: 2.5rem;
   }
@@ -64,10 +73,15 @@
     align-items: center; /* Aligne les éléments verticalement */
     justify-content: space-around; /* Répartit uniformément les éléments avec de l'espace autour */
     border-bottom: 3px solid black;
+    height: 30rem;
   }
 
   .presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     text-align: left;
+    height: 100%;
   }
 
   .name {
