--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,1 @@
-<div class="portfolio-container">
-  <header>
-    <app-header />
-  </header>
-
-  <main>
-    <div class="homepage">
-      <app-home-page />
-    </div>
-
-    <div class="projects">
-      <app-project-page />
-    </div>
-  </main>
-</div>
+<router-outlet />
