--- a/src/app/features/projects/pages/project-page/project-page.component.css
+++ b/src/app/features/projects/pages/project-page/project-page.component.css
@@ -2,11 +2,15 @@
   display: flex;
   border-bottom: 3px solid black;
 }
-
-.page-title {
-  flex: 1;
+h2 {
+  font-family: "TAN - twinkle";
+  text-transform: uppercase;
 }
 
+p,
+h3 {
+  font-family: "Nunito Sans", serif;
+}
 .carousel-container {
   flex: 2;
   position: relative;
@@ -31,14 +35,15 @@ img {
 }
 
 button {
-  position: absolute;
-  top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(0, 0, 0, 0.5);
-  color: white;
+  background-color: #fff9ee;
   border: none;
-  padding: 10px;
+  padding: 1rem;
   cursor: pointer;
+  z-index: 1;
+  margin: 2rem;
+  border-radius: 50%;
+  font-size: 2rem;
 }
 
 button:nth-child(2) {
