--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -12,6 +12,7 @@
       <img [src]="slide.image" alt="{{ slide.title }}" />
       <h3>{{ slide.infos }}</h3>
       <p>{{ slide.description }}</p>
+      <a href="'https://github.com/'">{{ slide.github }}</a>
     </div>
     <button (click)="previousSlide()">&lt;</button>
     <button (click)="nextSlide()">&gt;</button>
