overall page done

--- a/src/app/features/landing-page/landing-page.component.html
+++ b/src/app/features/landing-page/landing-page.component.html
@@ -11,5 +11,13 @@
     <div class="projects">
       <app-project-page />
     </div>
+
+    <div class="contact">
+      <app-contact-page />
+    </div>
+
+    <div class="about-me">
+      <app-about-me-page />
+    </div>
   </main>
 </div>
