--- a/src/app/shared/components/page-title/page-title.component.css
+++ b/src/app/shared/components/page-title/page-title.component.css
@@ -21,7 +21,7 @@ h1 {
     align-items: center;
     width: 25rem;
     border-right: 3px solid black;
-    border-bottom: 3px solid black;
+    border-right: 3px solid black;
   }
   h1 {
     display: flex;
