about-me mobile version to finish

--- a/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
+++ b/src/app/features/about-me/pages/about-me-page/about-me-page.component.html
@@ -2,4 +2,30 @@
   <div class="page-title">
     <app-page-title [title]="'about me'"></app-page-title>
   </div>
+  <div class="about-me-container">
+    <div class="about-me-img">
+      <img
+        src="\assets\img\dessinsite-sansfond.png"
+        alt="Croquis représentant Yennie Lake"
+      />
+    </div>
+    <div class="about-me-description">
+      <h1>un peu plus sur moi...</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae
+        dolore dolorum veniam, adipisci ratione esse? Iusto repellat magnam sint
+        culpa quidem doloribus maxime sequi temporibus deleniti aspernatur
+        laborum, voluptatibus dolores libero non facilis illo qui consequatur
+        dolorum doloremque eveniet perferendis esse distinctio eos natus.
+        Deleniti repudiandae consectetur itaque quam laborum. Inventore nesciunt
+        unde obcaecati culpa! Ipsum, quas fugiat? Numquam nesciunt vero
+        repudiandae eveniet molestiae iste fuga laborum veritatis odio
+        voluptatem. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Voluptate fugit nisi repellat consequuntur officiis ea perspiciatis
+        cupiditate? Unde error laudantium similique. Voluptatem sunt doloremque
+        amet facere aperiam, officiis quasi accusantium. In animi hic nostrum
+        inventore maiores perspiciatis numquam dolorum provident.
+      </p>
+    </div>
+  </div>
 </div>
