--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -2,7 +2,8 @@
   <div class="page-title">
     <app-page-title [title]="'projets'"></app-page-title>
   </div>
-  <div class="carousel-container">
+  <app-carousel></app-carousel>
+  <!-- <div class="carousel-container">
     <div
       class="carousel-slide"
       *ngFor="let slide of slides; let i = index"
@@ -16,5 +17,5 @@
     </div>
     <button (click)="previousSlide()">&lt;</button>
     <button (click)="nextSlide()">&gt;</button>
-  </div>
+  </div> -->
 </div>
