--- a/src/app/features/projects/pages/project-page/project-page.component.css
+++ b/src/app/features/projects/pages/project-page/project-page.component.css
@@ -1,6 +1,12 @@
-/* .project-page {
+.project-page {
   display: flex;
   border-bottom: 3px solid black;
+}
+
+.carousel-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 h2,
 a {
@@ -126,4 +132,4 @@ button:first-of-type:hover {
     font-size: 2rem;
     cursor: pointer;
   }
-} */
+}
