--- a/src/app/features/projects/pages/project-page/project-page.component.css
+++ b/src/app/features/projects/pages/project-page/project-page.component.css
@@ -1,135 +1,25 @@
-.project-page {
-  display: flex;
-  border-bottom: 3px solid black;
-}
-
-.carousel-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-h2,
-a {
-  font-family: "TAN - twinkle";
-  text-transform: uppercase;
-}
-a {
-  text-decoration: none;
-  color: black;
-  font-size: 1.5rem;
-}
-
-p {
-  padding: 1rem;
-}
-
-p,
-h3 {
-  font-family: "Nunito Sans", serif;
-}
-.carousel-container {
-  flex: 2;
-  position: relative;
-  margin: auto;
-  text-align: center;
-  width: 100%;
-  max-width: 600px;
-  overflow: hidden;
-}
-
-.carousel-slide {
-  display: none;
-}
-
-.carousel-slide.active {
-  display: block;
-}
-
-img {
-  width: 100%;
-  height: auto;
-}
-.carousel-slide {
-  position: relative;
-  text-align: center;
-}
-.carousel-container button {
-  position: absolute;
-  top: 35%;
-  transform: translateY(-50%);
-  background-color: none;
-  border: none;
-  padding: 0;
-  cursor: pointer;
-  z-index: 1;
-  margin: 2rem;
-  border-radius: 50%;
-  font-size: 3rem;
-  background-color: #fff9ee;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 4rem;
-  height: 4rem;
-}
-
-button:last-of-type:hover {
-  box-shadow: 5px 5px 14px 0px rgba(0, 0, 0, 0.73);
-  transition: box-shadow 1s;
-}
-
-button:first-of-type:hover {
-  box-shadow: -5px 5px 14px 0px rgba(0, 0, 0, 0.73);
-  transition: box-shadow 1s;
-}
-
-.carousel-container button:first-of-type {
-  left: 10px;
-}
-
-.carousel-container button:last-of-type {
-  right: 10px;
+@media (min-width: 769px) {
+  .project-page {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 3px solid black;
+  }
+  .page-title {
+    display: flex;
+    flex: 1;
+  }
+  .slider-div {
+    display: flex;
+    flex: 2;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 @media (max-width: 768px) {
   .project-page {
     display: flex;
     flex-direction: column;
-  }
-
-  .carousel-slide h2 {
-    padding: 1rem;
-    display: inline-block;
-    position: relative;
-    z-index: 1;
-  }
-  .carousel-container {
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 2rem;
-    border-bottom: 3px solid black;
-  }
-  button {
-    display: none;
-  }
-  img {
-    border-top: 3px solid black;
-    border-bottom: 3px solid black;
-  }
-  .carousel-container button:first-of-type {
-    left: 10px;
-  }
-
-  .carousel-container button:last-of-type {
-    right: 10px;
-  }
-  .carousel-container button {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: none;
-    font-size: 2rem;
-    cursor: pointer;
   }
 }
