carousel service fucking done and almost style baby !!!

--- a/src/app/features/projects/pages/project-page/project-page.component.html
+++ b/src/app/features/projects/pages/project-page/project-page.component.html
@@ -2,5 +2,7 @@
   <div class="page-title">
     <app-page-title [title]="'projets'"></app-page-title>
   </div>
-  <app-carousel />
+  <div class="slider-div">
+    <app-carousel />
+  </div>
 </div>
